syntax = "proto3";

import "common/model/model.proto";

option java_multiple_files = true;
option java_package = "com.voteva.quiz.grpc.model.v1";


message GUserInfo {
    GUuid userUid = 1;
    string firstName = 2;
    string lastName = 3;
    int64 createdDtime = 4;
    bool isAdmin = 5;
    bool isBlocked = 6;
}

message GTestResultInfo {
    GUuid userUid = 1;
    GUuid testUid = 2;
    int32 percent = 3;
    int32 attemptsAllowed = 4;
}
